--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "client"]
 	path = client
 	url = https://github.com/getodk/central-frontend.git
+[submodule "iic-odk-auth"]
+	path = iic-odk-auth
+	url = https://github.com/sadiqkhoja/iic-odk-auth.git
