--- a/.env.template
+++ b/.env.template
@@ -1,5 +1,6 @@
 # Use fully qualified domain names. Set to DOMAIN=local if SSL_TYPE=selfsign.
 DOMAIN=your.domain.com
+ADMINDOMAIN=your.domain.com
 
 # Used for Let's Encrypt expiration emails and Enketo technical support emails
 SYSADMIN_EMAIL=administrator@email.com
