--- a/files/enketo/config.json.template
+++ b/files/enketo/config.json.template
@@ -8,7 +8,7 @@
         "api key": "${API_KEY}",
         "authentication": {
             "type": "cookie",
-            "url": "https://${DOMAIN}:${HTTPS_PORT}/#/login?next={RETURNURL}"
+            "url": "https://${DOMAIN}:${HTTPS_PORT}/Auth/Login?next={RETURNURL}"
         },
         "name": "ODK Central",
         "server url": "${DOMAIN}"
